--- a/changelog.html
+++ b/changelog.html
@@ -59,6 +59,53 @@
 
 <p>標示有 <img src="images/reactor-bullet.png" width="16" height="16" alt="Reactor Marker" /> 符號表示透過 CodeIgniter Reactor 貢獻到 CodeIgniter。</p>
 
+<h2>版本 2.0.2</h2>
+<p>發佈日期: 2011年4月7日<br />
+Hg 標籤: v2.0.2</p>
+
+<ul>
+	<li>一般變更 (General changes)
+		<ul>
+			<li>The <a href="./libraries/security.html">Security library</a> was moved to the core and is now loaded automatically. Please remove your loading calls.</li>
+			<li>The CI_SHA class is now deprecated. All supported versions of PHP provide a <kbd>sha1()</kbd> function.</li>
+
+			<li class="reactor"><kbd>constants.php</kbd> will now be loaded from the environment folder if available.</li>
+			<li class="reactor">Added language key error logging</li>
+			<li class="reactor">Made Environment Support optional. Comment out or delete the constant to stop environment checks.</li>
+			<li class="reactor">Added Environment Support for Hooks.</li>
+			<li class="reactor">Added CI_ Prefix to the <a href="libraries/caching.html">Cache driver</a>.</li>
+
+		</ul>
+	</li>
+	<li>補助函式 (Helpers)
+		<ul>
+			<li>Removed the previously deprecated <kbd>dohash()</kbd> from the <a href="./helpers/security_helper.html">Security helper</a>; use <kbd>do_hash()</kbd> instead.</li>
+
+			<li class="reactor">Changed the 'plural' function so that it doesn't ruin the captalization of your string. It also take into consideration acronyms which are all caps.</li>
+		</ul>
+	</li>
+	<li>資料庫 (Database)
+		<ul>
+			<li class="reactor"><kbd>$this->db->count_all_results()</kbd> will now return an integer instead of a string.</li>
+		</ul>
+
+	</li>
+</ul>
+
+<h3>2.0.2 修正</h3>
+<ul>
+	<li class="reactor">Fixed a bug (Reactor #145) where the Output Library had parse_exec_vars set to protected.</li>
+	<li class="reactor">Fixed a bug (Reactor #80) where is_really_writable would create an empty file when on Windows or with safe_mode enabled.</li>
+	<li class="reactor">Fixed various bugs with User Guide.</li>
+	<li class="reactor">Added is_cli_request() method to documentation for <a href="libraries/input.html">Input class</a>.</li>
+
+	<li class="reactor">Added form_validation_lang entries for <kbd>decimal</kbd>, <kbd>less_than</kbd> and <kbd>greater_than</kbd>.</li>
+	<li class="reactor"><a href="https://bitbucket.org/ellislab/codeigniter-reactor/issue/153/escape-str-bug-in-mssql-driver">Fixed issue #153</a> Escape Str Bug in MSSQL driver.</li>
+	<li class="reactor"><a href="https://bitbucket.org/ellislab/codeigniter-reactor/issue/172/bug-in-chrome-and-form_open-in-201">Fixed issue #172</a> Google Chrome 11 posts incorrectly when action is empty.</li>
+
+</ul>
+
+<a name="2.0.1"></a>
 <h2>版本 2.0.1</h2>
 <p>發佈日期: 2011年3月15日<br />
 Hg 標籤: v2.0.1</p>
@@ -96,6 +143,7 @@ Hg 標籤: v2.0.1</p>
 	<li class="reactor">修正 (Reactor #69) SHA1 library 錯誤命名。</li>
 </ul>
 
+<a name="2.0.0"></a>
 <h2>版本 2.0.0</h2>
 <p>發佈日期: 2011年1月28日<br />
 Hg 標籤: v2.0.0</p>
