--- a/changelog.html
+++ b/changelog.html
@@ -57,7 +57,24 @@
 
 <h1>版本紀錄</h1>
 
-<a name="2.1.1"></a>
+<a name="2.1.3"></a>
+<h2>版本 2.1.3</h2>
+<p>發佈日期: October 8, 2012</p>
+
+<h3>2.1.3 修正項目</h3>
+<ul>
+    <li>Fixed a bug (#1543) - <a href="libraries/caching.html#file">File-based Caching</a> method <samp>get_metadata()</samp> used a non-existent array key to look for the TTL value.</li>
+    <li>Fixed a bug (#1314) - <a href="libraries/session.html">Session Library</a> method <samp>sess_destroy()</samp> didn't destroy the userdata array.</li>
+    <li>Fixed a bug where the <a href="libraries/profiler.html">Profiler Library</a> issued an E_WARNING error if <a href="libraries/session.html">Session</a> userdata contains objects.</li>
+    <li>Fixed a bug (#1699) - <a href="libraries/migration.html">Migration Library</a> ignored the <samp>$config['migration_path']</samp> setting.</li>
+    <li>Fixed a bug (#227) - <a href="libraries/input.html">Input Library</a> allowed unconditional spoofing of HTTP clients' IP addresses through the HTTP_CLIENT_IP header.</li>
+    <li>Fixed a bug (#907) - <a href="libraries/input.html">Input Library</a> ignored HTTP_X_CLUSTER_CLIENT_IP and HTTP_X_CLIENT_IP headers when checking for proxies.</li>
+    <li>Fixed a bug (#940) - <samp>csrf_verify()</samp> used to set the CSRF cookie while processing a POST request with no actual POST data, which resulted in validating a request that should be considered invalid.</li>
+    <li>Fixed a bug in the <a href="libraries/security.html">Security Library</a> where a CSRF cookie was created even if <samp>$config['csrf_protection']</samp> is set tot FALSE.</li>
+    <li>Fixed a bug (#1715) - <a href="libraries/input.html">Input Library</a> triggered <samp>csrf_verify()</samp> on CLI requests.</li>
+</ul>
+
+<a name="2.1.2"></a>
 <h2>版本 2.1.2</h2>
 <p>發佈日期: June 29, 2012</p>
 
@@ -93,7 +110,7 @@
     </li>
 </ul>
 
-<h3>Bug fixes for 2.1.1</h3>
+<h3>2.1.1 修正項目</h3>
 <ul>
     <li>Fixed a bug (#697) - A wrong array key was used in the Upload library to check for mime-types.</li>
     <li>Fixed a bug - form_open() compared $action against site_url() instead of base_url()</li>
