--- a/installation/upgrade_213.html
+++ b/installation/upgrade_213.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>從 2.1.1 升級到 2.1.2 : CodeIgniter 使用手冊</title>
+<title>從 2.1.2 升級到 2.1.3 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -40,9 +40,9 @@
 <table cellpadding="0" cellspacing="0" border="0" style="width:100%">
 <tr>
 <td id="breadcrumb">
-<a href="http://www.codeigniter.org.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
+<a href="http://codeigniter.com/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-從 2.1.1 升級到 2.1.2
+從 2.1.2 升級到 2.1.3
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="codeigniter.com/user_guide/" />Search User Guide&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,7 +55,7 @@
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>從 2.1.1 升級到 2.1.2</h1>
+<h1>從 2.1.2 升級到 2.1.3</h1>
 
 <p>在執行升級之前，你可以透過更換 index.php 為靜態檔案，使得網站狀態為 offline。</p>
 
@@ -88,6 +88,5 @@ try {
 var pageTracker = _gat._getTracker("UA-5766319-11");
 pageTracker._trackPageview();
 } catch(err) {}</script>
-
 </body>
 </html>
